# x_macros

./: README.adoc
person_table/: go.cpp
range_and_chained_conditional_operator/: CMakeLists.txt  go.cpp
